--- a/contactMe.html
+++ b/contactMe.html
@@ -6,7 +6,9 @@
     <title>Contact Me</title>
     <style>
 
-     h2 {color: blueviolet; font-style: italic;}
+    h2 {
+        color: blueviolet; font-style: italic;
+    }
 
     .list, #list-id {
         color: rgb(116, 61, 13); font-weight: bold;
