--- a/others.html
+++ b/others.html
@@ -6,8 +6,34 @@
     <title>Others</title>
 </head>
 <body>
-  <!-- Hobbies : any 3 -->
-  <!-- Personal Strength : any 3 -->
-  <!-- Achievements -->  
+    <h1>Hobbies</h1>
+    <ol>
+        <li>Cricket</li>
+        <li>Football</li>
+        <li>Painting</li>
+        <li>Watching Movies</li>
+        <li>Reading Books</li>
+    </ol>
+    <hr>
+    <h1>Personal Strength</h1>
+    <ul>
+        <li>Teamwork</li>
+        <li>Creativity</li>
+        <li>Problem Solver</li>
+        <li>Leadership</li>
+        <li>Honesty</li>
+    </ul>
+    <hr>
+    <h1>Achievements</h1>
+    <ul>
+            <li>Re-organized something to make it work better.</li>
+            <li>Identified a problem and solved it.</li>
+            <li>Come up with a new idea that improved things.</li>
+            <li>Developed or implemented new procedures or systems.</li>
+            <li>Worked on special projects.</li>
+            <li>Received awards.</li>
+            <li>Been complimented by your supervisor or co-workers.</li>
+
+    </ul>   
 </body>
 </html>
