--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
     <!-- Navigation Section -->
     <nav>
         <a href="#home">HOME</a> &nbsp; &nbsp; &nbsp; &nbsp;
-        <a href="#techStack">TECH STACK</a> &nbsp; &nbsp; &nbsp; &nbsp;
-        <a href="#projects">PROJECTS</a> &nbsp; &nbsp; &nbsp; &nbsp;
-        <a href="#education">EDUCATION</a> &nbsp; &nbsp; &nbsp; &nbsp;
-        <a href="#personalDetails.html" target="_blank">PERSONAL DETAILS</a> &nbsp; &nbsp; &nbsp; &nbsp;
-        <a href="#others.html" target="_blank">OTHERS</a>
+        <a href="techStack.html" target="_blank">TECH STACK</a> &nbsp; &nbsp; &nbsp; &nbsp;
+        <a href="projects.html" target="_blank">PROJECTS</a> &nbsp; &nbsp; &nbsp; &nbsp;
+        <a href="education.html" target="_blank">EDUCATION</a> &nbsp; &nbsp; &nbsp; &nbsp;
+        <a href="personalDetails.html" target="_blank">PERSONAL DETAILS</a> &nbsp; &nbsp; &nbsp; &nbsp;
+        <a href="others.html" target="_blank">OTHERS</a>
     </nav>
 
     <!-- HOME Section -->
