--- a/personalDetails.html
+++ b/personalDetails.html
@@ -5,7 +5,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Details</title>
 </head>
-<body>
-    
+
+  <!-- Hobbies : any 3 -->
+  <!-- Personal Strength : any 3 -->
+  <!-- Achievements -->
+
+  <body>
+  <h1>My Personal Details</h1><br>
+  <img src="Developer_Image.png" alt="Developer Image"><br>
+  <p><strong>Name:</strong> Mohit Sharma</p>
+  <h2>Contact Details</h2>
+  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>Mobile:</strong> 12345-678-90<br>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>Email:</strong> mohit.sharma@gmail.com</p>
+  <hr>
+  <h2>My Technology Stack</h2>
+  <ul>
+  <li>HTML5</li>
+  <li>CSS</li>
+  <li>JavaScript</li>
+  <li>Angular</li>
+  </ul>
+  <hr>
+  <h2>Academic Details</h2>
+  <table border="1">
+      <thead>
+          <tr>
+             <th>Sr. No</th>
+             <th>Academic</th>
+             <th>College Name</th>
+             <th>University / Board</th>
+          </tr>
+      </thead>
+      <tbody>
+          <tr>
+            <td>1</td>
+            <td>Graduation</td>
+            <td>COEP College</td>
+            <td>Pune University</td>
+          <tr>
+          <tr>
+            <td>2</td>
+            <td>HSC or 12<sup>th</sup></td>
+            <td>The Lexicon International School</td>
+            <td>Maharashtra Divisional Board</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>SSC or 10<sup>th</sup></td>
+          <td>Indus International School</td>
+          <td>Maharashtra Divisional Board</td>
+          </tr>
+      </tbody>
+      </table>
 </body>
 </html>
