--- a/cssLearning.html
+++ b/cssLearning.html
@@ -6,26 +6,102 @@
     <title>CSS Learning</title>
     <style>
 
-     h2 {color: blueviolet; font-style: italic;}
+     /* 
 
-    .list, #list-id {
-        color: rgb(116, 61, 13); font-weight: bold;
+     *{border: 5px solid rgb(190, 187, 187);}
+
+     */
+    
+    .heading {color: #fff; font-style: italic; background-color: blueviolet; padding:5px;}
+
+    .list, #list-id {color: rgb(116, 61, 13); font-weight: bold;}
+
+    header {background-color:#333; padding:10px 5px; margin-bottom: 10px; color: #fff;}
+
+    header a {color:#fff;}
+
+    #experience{
+            font-weight: bolder;
+            background-color: aquamarine;
+            color:#790303;
+            padding:2px 2px 2px 2px;
     }
+
+    /* .tech{
+            color: #790303;
+            font-style: none;
+            font-weight: bold; 
+    }*/
+
+    #agile{
+            font-style: italic;
+            font-weight: bold;
+            background-color: rgb(230, 227, 227);
+        }
+
+    #summary{
+           font-size: larger; 
+           font-family: Georgia, 'Times New Roman', Times, serif;
+           text-align: left;
+           text-decoration: none;
+           text-transform: capitalize;
+        }
+
+        #home {
+            /* border-left-style: dotted;
+            border-width: 5px;
+            border-color: red; */
+            border: 5px solid rgb(190, 187, 187);
+            padding: 10px;
+            margin: 20px 2px 0px 2px;
+        }
 
 </style>
 </head>
 <body>
- <h2>Professional Summery</h2>
+    <!-- Header section -->
+    <header>
+        <p> 
+         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
+                <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6"/>
+              </svg>  &nbsp;Vishal Nawale   &nbsp; &nbsp; &nbsp;
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z"/>
+          </svg>  &nbsp; 9860-559-154  &nbsp; &nbsp; &nbsp;
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-fill" viewBox="0 0 16 16">
+            <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414zM0 4.697v7.104l5.803-3.558zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586zm3.436-.586L16 11.801V4.697z"/>
+          </svg> &nbsp;vishalunawale9860@gmail.com &nbsp;&nbsp;&nbsp; 
+          <a href="Assets/resume.pdf" download="" class="resume"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-arrow-down-fill" viewBox="0 0 16 16">
+            <path d="M12 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2M8 5a.5.5 0 0 1 .5.5v3.793l1.146-1.147a.5.5 0 0 1 .708.708l-2 2a.5.5 0 0 1-.708 0l-2-2a.5.5 0 1 1 .708-.708L7.5 9.293V5.5A.5.5 0 0 1 8 5"/>
+          </svg>Resume</p>
+    </header>
+
+     <!-- Navigation Section -->
+     <nav>
+        <a href="#home">HOME</a> &nbsp; &nbsp; &nbsp; &nbsp;
+        <a href="techStack.html" target="_blank">TECH STACK</a> &nbsp; &nbsp; &nbsp; &nbsp;
+        <a href="projects.html" target="_blank">PROJECTS</a> &nbsp; &nbsp; &nbsp; &nbsp;
+        <a href="education.html" target="_blank">EDUCATION</a> &nbsp; &nbsp; &nbsp; &nbsp;
+        <a href="personalDetails.html" target="_blank">PERSONAL DETAILS</a> &nbsp; &nbsp; &nbsp; &nbsp;
+        <a href="others.html" target="_blank">OTHERS</a>
+    </nav>
+
+
+<div id="home">
+<h2 class="heading">Career Objectives</h2>
+<p>TO WORK IN ORGANIZATION WHERE I CAN LEARN AND GROW MY SKILLS AND HELP ORGANIZATIONAL GROWTH</p>
+ <h2 class="heading">Professional Summery</h2>
  <ul>
- <li>Having 1 years of experience in developing Single page Web Applications using Angular 8, HTML5, CSS3, Bootstrap 5, JavaScript, TypeScript</li><br>
- <li class="list">Experience on working with version control system - GIT and GitHub</li><br>
- <li class="list">Experience working with JIRA for user stories and bug tracking</li><br>
+ <li>Having 1 years of experience in developing Single page Web Applications using React, Java, <span style="color: #790303;
+    font-style: none; font-weight: bold;">Angular 8,</span> HTML5, CSS3, Bootstrap 5, JavaScript, TypeScript</li><br>
+ <li id="experience">Experience on working with version control system - GIT and GitHub</li><br>
+ <li>Experience working with JIRA for user stories and bug tracking</li><br>
  <li>Strong Debugging & Troubleshooting code experience using Chrome Developer Tool</li><br>
- <li class="list" >Working exposure on ID's like VS Code and Notepad++</li><br>
- <li>Good working experience under Agile methodologies environment</li><br>
+ <li>Working exposure on ID's like VS Code and Notepad++</li><br>
+ <li>Good working experience under <span id="agile">methodologies environment</span></li><br>
  <li>Experience in using Chrome Developer Tool for debugging and Troubleshooting the code</li><br>
  <li>Knowledge of NodeJS</li><br>
- <li id="list-id">Ability to work with people at all levels in the program</li>
+ <li>Ability to work with people at all levels in the program</li>
  </ul>
 </body>
 </html>
