Css Code Updated
Code Checked and Updated From My Side..!

--- a/cssLearning.html
+++ b/cssLearning.html
@@ -12,7 +12,7 @@
 
      */
     
-    .heading {color: #fff; font-style: italic; background-color: blueviolet; padding:5px;}
+    .heading {color: #fff; background-color: blueviolet; padding:5px;}
 
     .list, #list-id {color: rgb(116, 61, 13); font-weight: bold;}
 
