--- a/cssBoxModel.html
+++ b/cssBoxModel.html
@@ -5,14 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Box Model</title>
     <style>
-        p{
-            border: 2px solid cadetblue;
+       p {
+            border: 5px solid cadetblue;
         }
         #summary{
             font-size: larger;
-            padding-left: 30px;
+            /* padding-left: 30px; */
             /* margin: 30px; */
-            margin:50px 100px 90px 100px;
+            /* margin: 20px 50px; */
+            padding: 30px;
+            width: 200px;
+            box-sizing: content-box;
         }
         #project{
             font-size: larger;
@@ -20,12 +23,35 @@
             padding-right: 40px;
             padding-bottom: 40px;
             padding-left: 40px; */
-            padding:40px 10px;   
+            /* padding:40px 10px;    */
+            padding: 30px;
+            width: 200px;
+            box-sizing: border-box;
+        }
+
+        #one{
+            font-size: 30px;
+            box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+            -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+            -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+        }
+        #two{
+            font-size: 30px;
+        }
+        #para1{
+            font-size: 2em;
+        }
+        #para2{
+            font-size: 2rem;  
         }
     </style>
 </head>
 <body>
-    <p id="summary">Professional Summary</p>
-    <p id="project">Project Section</p>
+    <div id="one">
+        <p id="para1">Paragraph one</p>
+    </div>
+    <div id="two">
+        <p id="para2">Paragraph Two</p>
+    </div>
 </body>
 </html>
