--- a/contactMe.html
+++ b/contactMe.html
@@ -14,12 +14,43 @@
         color: rgb(116, 61, 13); font-weight: bold;
     }
 
+    label, button{
+            font-size: large;
+            color: blue;
+        }
+
+        input[type="text"], input[type="email"] {
+            border: 2px solid rgb(248, 181, 57);
+            padding: 5px 5px ;
+            border-radius: 8px;
+            width: 250px;
+            text-transform: capitalize;
+            color: cadetblue;
+        }
+        button[type="submit"]:hover{
+            color: rgb(183, 122, 8);
+            border-radius: 8px;
+            border: 2px solid rgb(248, 181, 57);
+        }
+
+        #projectDesc::selection{
+      background-color: rgb(241, 193, 104);
+        }
+
+        #listSummary li{
+        list-style-type: none;
+        }
+
+        #listSummary li::marker{
+        content: "✍️";
+        }
+
 </style>
 </head>
 <body>
  <h2>Professional Summery</h2>
  <ul>
- <li>Having 1 years of experience in developing Single page Web Applications using Angular 8, HTML5, CSS3, Bootstrap 5, JavaScript, TypeScript</li><br>
+ <li id="projectDesc">Having 1 years of experience in developing Single page Web Applications using Angular 8, HTML5, CSS3, Bootstrap 5, JavaScript, TypeScript</li><br>
  <li class="list">Experience on working with version control system - GIT and GitHub</li><br>
  <li class="list">Experience working with JIRA for user stories and bug tracking</li><br>
  <li>Strong Debugging & Troubleshooting code experience using Chrome Developer Tool</li><br>
@@ -29,5 +60,29 @@
  <li>Knowledge of NodeJS</li><br>
  <li id="list-id">Ability to work with people at all levels in the program</li>
  </ul>
+
+<h2>Contact Me</h2>
+    <form action="">
+        <table>
+            <tbody>
+                <tr>
+                    <td><label for="">Full Name </label></td>
+                    <td><input type="text"> <br></td>
+                </tr>
+                <tr>
+                    <td><label for="">Email </label> </td>
+                    <td><input type="email"></td>
+                </tr>
+                <tr>
+                    <td><label for="">Question</label></td>
+                    <td><textarea name="textarea" id="" cols="30" rows="10"></textarea></td>
+                </tr>
+                <tr>
+                    <td> <button type="submit">Send Question</button> </td>
+                    <td> <button type="reset">Clear Info</button></td>
+                </tr>
+            </tbody>
+        </table>
+    </form>
 </body>
 </html>
