Content and CSS Updated
Content and CSS Updated

--- a/index.html
+++ b/index.html
@@ -68,8 +68,13 @@
 
 <hr>
    <section id="techStack">
-        <h2 class="heading" >My Technology stack is</h2>
-        
+        <h2 class="heading">My Technology stack is</h2>
+        <ul>
+        <li>HTML5</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+        <li>Angular</li>
+        </ul>
    </section>
 <hr>
    <section id="projects">
@@ -116,7 +121,43 @@
       <hr>
     <section id="personalDetails">
         <h2 style="color: brown;" class="heading">My Personal Details</h2>
-        
+        <img src="Developer_Image.png" alt="Developer Image"><br>
+        <h2>Contact Details</h2>
+        <p><strong>Name:</strong> Mohit Sharma<br>
+        <strong>Mobile:</strong> 12345-678-90<br>
+        <strong>Email:</strong> mohit.sharma@gmail.com</p>
+ 
+       <!-- <h2>Academic Details</h2>
+        <table border="1">
+            <thead>
+                <tr>
+                   <th>Sr. No</th>
+                   <th>Academic</th>
+                   <th>College Name</th>
+                   <th>University / Board</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                  <td>1</td>
+                  <td>Graduation</td>
+                  <td>COEP College</td>
+                  <td>Pune University</td>
+                <tr>
+                <tr>
+                  <td>2</td>
+                  <td>HSC or 12<sup>th</sup></td>
+                  <td>The Lexicon International School</td>
+                  <td>Maharashtra Divisional Board</td>
+                </tr>
+                <tr>
+                  <td>3</td>
+                  <td>SSC or 10<sup>th</sup></td>
+                <td>Indus International School</td>
+                <td>Maharashtra Divisional Board</td>
+                </tr>
+            </tbody>
+            </table> --> 
       </section>
       <hr>
     <section id="others">
@@ -132,7 +173,15 @@
       </p>
       <section>
         <!-- Copy write section -->
-        <p>Copyright &copy;2024 CodeMind Technology Video Communications, Inc. All rights reserved.</p>
+        <p style="text-align:center;">Copyright &copy;2024 CodeMind Technology Video Communications, Inc. All rights reserved.</p>
+      <table>
+        <tbody>
+          <tr>
+            <td><img src="Assets/whatsapp.png"  style="width:50px;"></td>
+            <td><img src="Assets/messenger.png" style="width:50px;"></td>
+          </tr>
+        </tbody>
+      </table>
       </section>
     </footer>
   </body>
