--- a/simpleCard.html
+++ b/simpleCard.html
@@ -24,8 +24,7 @@ box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.88);
 }
 
 
-#Combo-section-2
-{
+#Combo-section-2{
 background-color: #282832;
 width:500px;
 height:300px;
@@ -70,9 +69,7 @@ float:left;
 .section-3 h2 {font-size: 24px; margin-bottom:20px; color:#fff; font-family: Arial, Helvetica, sans-serif; font-weight: 100; letter-spacing: 2px;}
 
 </style>
-
 </head>
-
 <body>
 
 <div id="Combo-section-1">
@@ -93,21 +90,13 @@ float:left;
 </div>
 </div>
 
-
 <div id="Combo-section-2">
-<div class="section-5">
-<h1 style="color:#48d1ff; 
-font-family: Verdana, Geneva, Tahoma, sans-serif; 
-margin-bottom:50px; font-size: 40px;">2 Stocks<br>
-    Recommendation<br>
-    Weekly</h1>
+<div class="section-combo">
+<h1 style="color:#48d1ff; font-family: Verdana, Geneva, Tahoma, sans-serif; margin-bottom:50px; font-size: 40px;">2 Stocks<br>Recommendation<br>Weekly</h1>
 </div>
 
 <div class="section-3">
-<h2>Midcap Stocks Gaining<br>
-    Momentum After 30-40% Fall<br>
-    From 52 Week High</h2>
-    </div>
+<h2>Midcap Stocks Gaining<br>Momentum After 30-40% Fall<br>From 52 Week High</h2></div>
 
     <div class="section-4">
     <img src="Arrow-Image.png">
