--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <tbody>
           <tr>
             <td><img src="Assets/whatsapp.png"  style="width:50px;"></td>
-            <td><img src="Assets/messenger.png" style="width:50px;"></td>
+            <td><img src="Assets/messenger.png" style="width:50px; margin-right: 65px;"></td>
           </tr>
         </tbody>
       </table>
